[package]
name = "zircon-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
axum = "0.7.4"
base64 = "0.21.7"
chrono = "0.4.31"
hyper = { version = "1.1.0", features = ["full"] }
jsonschema = "0.17.1"
jsonwebtoken = "9.2.0"
nanoid = "0.4.0"
openssl = "0.10.62"
postgres = { version = "0.19.7", features = ["with-serde_json-1"] }
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
reqwest = { version = "0.11.23", features = ["blocking", "json", "native-tls"] }
rustls = "0.22.2"
rustls-pemfile = "2.1.0"
serde = "1.0.195"
serde_json = "1.0.111"
tokio = { version = "1.35.1", features = ["full"] }
tokio-rustls = "0.25.0"
tower = "0.4.1"
tower-http = { version = "0.5.1", features = ["cors"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
